--- a/rest-countries-api-with-color-theme-switcher/src/Components/Filter/Filter.css
+++ b/rest-countries-api-with-color-theme-switcher/src/Components/Filter/Filter.css
@@ -55,6 +55,11 @@
   width: 100%;
   color: var(--font-color);
   font-size: 1rem;
+  cursor: pointer;
+}
+
+.dropdown select option {
+  cursor: pointer;
 }
 
 .dropdown select:focus {
