--- a/blogr-landing-page/src/scss/style.scss
+++ b/blogr-landing-page/src/scss/style.scss
@@ -309,4 +309,26 @@ footer {
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
   }
+
+  .lead {
+    font-size: 1rem;
+    color: var(--neutral-white);
+    font-weight: 700;
+    font-family: "Ubuntu", sans-serif;
+    margin-bottom: 2em;
+    display: block;
+  }
+
+  ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+
+    a {
+      color: var(--neutral-grayish-blue);
+      text-decoration: none;
+      font-family: "Overpass", sans-serif;
+    }
+  }
 }
