--- a/blogr-landing-page/src/scss/style.scss
+++ b/blogr-landing-page/src/scss/style.scss
@@ -119,20 +119,34 @@ h5 {
   border-radius: 1.5em;
   border: none;
   outline: none;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
 
   &-primary {
     color: var(--primary-light-red);
+
+    &:hover,
+    &:focus {
+      background-color: var(--primary-light-red);
+      color: var(--neutral-white);
+    }
   }
 
   &-secondary {
     background-color: transparent;
     color: var(--neutral-white);
     border: 1px solid var(--neutral-white);
+
+    &:hover,
+    &:focus {
+      background-color: var(--neutral-white);
+      color: var(--primary-very-light-red);
+    }
   }
 }
 
 nav {
-  margin-bottom: 12em;
+  margin-bottom: 10em;
   display: flex;
   align-items: center;
   gap: 3em;
@@ -146,6 +160,8 @@ nav {
 
     li {
       gap: 3em;
+      position: relative;
+      padding: 0 0 1em;
     }
 
     li:nth-child(4) {
@@ -162,11 +178,35 @@ nav {
     img {
       margin-left: 0.4em;
     }
+
+    &:hover img {
+      transform: rotate(180deg);
+    }
   }
 }
 
-nav ul li ul {
-  display: none;
+nav ul li {
+  & ul {
+    display: none;
+    background-color: var(--neutral-white);
+    border-radius: 0.3em;
+    position: absolute;
+    padding: 1em 8em 0.5em 1.5em;
+    top: 100%;
+    left: -40%;
+
+    a {
+      color: var(--primary-very-dark-blue);
+
+      &:hover {
+        font-weight: 700;
+      }
+    }
+  }
+
+  &:hover ul {
+    display: block;
+  }
 }
 
 .intro {
@@ -180,7 +220,6 @@ nav ul li ul {
   padding: 2em 0 8em;
   border-bottom-left-radius: 5em;
   z-index: 0;
-  overflow: hidden;
   min-height: 50vh;
 
   h1 {
@@ -336,6 +375,10 @@ footer {
       color: var(--neutral-grayish-blue);
       text-decoration: none;
       font-family: "Overpass", sans-serif;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
@@ -441,22 +484,121 @@ footer {
 
   .burger {
     display: block;
+    cursor: pointer;
 
     span {
       padding: 0.08em 1em;
       background-color: var(--neutral-white);
       display: block;
       margin-bottom: 0.4em;
+      transition: all 0.5s ease-in-out;
+    }
+
+    &.active {
+      span:first-of-type {
+        transform: translateY(350%) rotate(45deg);
+      }
+      span:nth-child(2) {
+        opacity: 0;
+      }
+      span:last-of-type {
+        transform: translateY(-350%) rotate(-45deg);
+      }
     }
   }
 
   nav {
     margin-bottom: 8em;
     justify-content: space-between;
+    position: relative;
+    z-index: 20;
 
-    ul {
+    & > ul {
       position: absolute;
+      flex-direction: column;
+      align-items: center;
+      background-color: var(--neutral-white);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      top: 120%;
+      left: 0;
+      padding: 1.5em 1.5em;
+      gap: unset;
       visibility: hidden;
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: top;
+      transition: all 0.3s ease-in-out;
+
+      li {
+        width: 100%;
+        text-align: center;
+        padding: 1em 0;
+      }
+
+      li:nth-child(3) {
+        border-bottom: 1px solid var(--neutral-very-dark-black-blue);
+      }
+
+      a {
+        color: var(--primary-very-dark-blue);
+        font-size: 1.2rem;
+        font-weight: 500;
+
+        img.mobile {
+          display: inline;
+          margin-left: 0.4em;
+          margin-right: -0.8em;
+        }
+
+        &:hover img {
+          transform: rotate(0);
+        }
+      }
+    }
+
+    ul.active {
+      visibility: visible;
+      opacity: 1;
+      transform: scale(1);
+    }
+
+    ul li {
+      &:hover ul {
+        display: none;
+      }
+
+      ul {
+        display: none;
+        position: static;
+        background-color: var(--neutral-grayish-blue);
+        height: 100%;
+        padding: unset;
+
+        li {
+          width: 100%;
+        }
+
+        li:nth-child(3) {
+          border-bottom: none;
+        }
+      }
+
+      &.active {
+        & > a {
+          display: block;
+          margin-bottom: 1em;
+          color: var(--neutral-very-dark-grayish-blue);
+          font-weight: 700;
+
+          img {
+            transform: rotate(180deg);
+          }
+        }
+
+        ul {
+          display: block;
+        }
+      }
     }
   }
 
