--- a/single-page-design-portfolio/src/styles/main.scss
+++ b/single-page-design-portfolio/src/styles/main.scss
@@ -21,6 +21,11 @@ body {
   background-color: var(--white);
 }
 
+img {
+  max-width: 100%;
+  object-fit: cover;
+}
+
 .container {
   padding-inline: 15%;
 }
@@ -40,6 +45,11 @@ body {
   color: var(--white);
 }
 
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -49,5 +59,84 @@ header {
   .btn {
     padding: 1em 3em;
     border-radius: 3em;
+  }
+}
+
+.solutions {
+  text-align: center;
+  margin-bottom: 3em;
+
+  h1 {
+    margin-bottom: 0.5em;
+  }
+
+  p {
+    margin-inline: auto;
+    margin-bottom: 4em;
+    color: var(--grey);
+    font-weight: 500;
+    font-size: 1rem;
+    line-height: 1.5;
+    max-width: max(500px, 42%);
+  }
+
+  &-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1em;
+  }
+}
+
+.solutions-container {
+  div {
+    border-radius: 0.5em;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+
+    img {
+      display: block;
+      width: 40%;
+      margin-left: auto;
+    }
+
+    h4 {
+      margin-top: auto;
+      text-align: left;
+      font-size: 1rem;
+      font-weight: 500;
+    }
+  }
+
+  div:first-child {
+    background-color: var(--violet);
+    color: var(--white);
+    grid-row: 1/3;
+  }
+
+  div:nth-child(2) {
+    background-color: var(--yellow);
+    color: var(--white);
+  }
+
+  div:nth-child(3) {
+    background-color: var(--light-pink);
+    color: var(--white);
+  }
+
+  div:nth-child(4) {
+    background-color: var(--turquoise);
+    color: var(--white);
+  }
+
+  div:nth-child(5) {
+    background-color: var(--orange);
+    color: var(--white);
+    grid-column: 2/4;
+  }
+
+  div:last-child {
+    background-color: var(--palatinate-purple);
+    color: var(--white);
   }
 }
