--- a/entertainment-web-app/frontend/src/app/dashboard/dashboard.component.html
+++ b/entertainment-web-app/frontend/src/app/dashboard/dashboard.component.html
@@ -6,5 +6,62 @@
       <input type="text" placeholder="Search for movies or TV series" />
     </div>
     <h2>Trending</h2>
+    <div class="trending-container">
+      <div *ngFor="let trending of state" class="trending-card">
+        <div *ngIf="trending.isTrending">
+          <img src="{{ trending.thumbnail.trending.large }}" alt="" />
+          <div class="trending-details">
+            <div>
+              <span>{{ trending.year }}</span
+              >&middot;
+              <div [ngSwitch]="trending.category">
+                <img
+                  src="../../assets/icon-category-movie.svg"
+                  alt=""
+                  *ngSwitchCase="'Movie'"
+                />
+                <img
+                  src="../../assets/icon-category-tv.svg"
+                  alt=""
+                  *ngSwitchCase="'TV Series'"
+                />
+                <img src="" alt="" *ngSwitchDefault="" />
+              </div>
+              <span>{{ trending.category }}</span
+              >&middot;<span>{{ trending.rating }}</span>
+            </div>
+            <h3>{{ trending.title }}</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+    <h2>Recommended for you</h2>
+    <div class="recommended-container">
+      <div *ngFor="let Recommended of recommended" class="recommended-card">
+        <img src="{{ Recommended.thumbnail.regular.large }}" alt="" />
+        <div class="recommended-details">
+          <div>
+            <span>{{ Recommended.year }}</span
+            >&middot;
+            <div [ngSwitch]="Recommended.category">
+              <img
+                src="../../assets/icon-category-movie.svg"
+                alt=""
+                *ngSwitchCase="'Movie'"
+              />
+              <img
+                src="../../assets/icon-category-tv.svg"
+                alt=""
+                *ngSwitchCase="'TV Series'"
+              />
+              <img src="" alt="" *ngSwitchDefault="" />
+            </div>
+            <span>{{ Recommended.category }}</span
+            >&middot;<span>{{ Recommended.rating }}</span>
+          </div>
+          <h3>{{ Recommended.title }}</h3>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
