--- a/entertainment-web-app/frontend/src/app/dashboard/dashboard.component.scss
+++ b/entertainment-web-app/frontend/src/app/dashboard/dashboard.component.scss
@@ -9,6 +9,7 @@ main {
 
   & > div {
     width: 100%;
+    overflow-x: hidden;
   }
 
   .search {
@@ -17,6 +18,89 @@ main {
 
   h2 {
     color: var(--white);
+    font-size: 2rem;
     font-weight: 300;
+    margin-bottom: 1em;
+  }
+
+  .trending-container {
+    display: flex;
+    gap: 3em;
+    margin-bottom: 2em;
+
+    img {
+      max-width: 30vw;
+      border-radius: 1em;
+    }
+
+    .trending-card {
+      overflow: hidden;
+      min-width: min-content;
+      position: relative;
+    }
+
+    .trending-details {
+      border-radius: 1em;
+      position: absolute;
+      background-color: rgba($color: #000000, $alpha: 0.1);
+      color: var(--white);
+      inset: 0;
+      padding: 1em;
+      display: flex;
+      flex-direction: column;
+
+      > div {
+        margin-top: auto;
+        margin-bottom: 0.2em;
+        font-size: 0.9rem;
+        font-weight: 300;
+        display: flex;
+        gap: 0.5em;
+      }
+
+      h3 {
+        font-weight: 400;
+        font-size: 1.5rem;
+      }
+
+      img {
+        max-width: unset;
+        border-radius: unset;
+      }
+    }
+  }
+
+  .recommended-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
+    gap: 3em;
+    padding-right: 1em;
+    padding-bottom: 2em;
+
+    .recommended-card {
+      width: 100%;
+      height: 100%;
+
+      & > img {
+        display: block;
+        width: 90%;
+        object-fit: cover;
+        margin-bottom: 1em;
+        border-radius: 0.6em;
+      }
+
+      .recommended-details {
+        color: var(--white);
+
+        > div {
+          display: flex;
+          gap: 0.6em;
+          align-items: center;
+          font-weight: 300;
+          font-size: 1rem;
+          margin-bottom: 0.5em;
+        }
+      }
+    }
   }
 }
